admin safety fixes
